content/_generated-doc/2.13/config/quarkus-datasource-data-sources-reactive-my-sql-config.adoc

:summaryTableId: quarkus-datasource-data-sources-reactive-my-sql-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-datasource-data-sources-reactive-my-sql-config_configuration]]link:#quarkus-datasource-data-sources-reactive-my-sql-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.reactive.mysql.charset]]`link:#quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.reactive.mysql.charset[quarkus.datasource.reactive.mysql.charset]`

[.description]
--
Charset for connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_MYSQL_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_MYSQL_CHARSET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.reactive.mysql.collation]]`link:#quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.reactive.mysql.collation[quarkus.datasource.reactive.mysql.collation]`

[.description]
--
Collation for connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_MYSQL_COLLATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_MYSQL_COLLATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.reactive.mysql.ssl-mode]]`link:#quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.reactive.mysql.ssl-mode[quarkus.datasource.reactive.mysql.ssl-mode]`

[.description]
--
Desired security state of the connection to the server. 
See link:https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-mode[MySQL Reference Manual].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_MYSQL_SSL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_MYSQL_SSL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disabled`, `preferred`, `required`, `verify-ca`, `verify-identity` 
|`disabled`


h|[[quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a| [[quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.-datasource-name-.reactive.mysql.charset]]`link:#quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.-datasource-name-.reactive.mysql.charset[quarkus.datasource."datasource-name".reactive.mysql.charset]`

[.description]
--
Charset for connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_CHARSET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.-datasource-name-.reactive.mysql.collation]]`link:#quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.-datasource-name-.reactive.mysql.collation[quarkus.datasource."datasource-name".reactive.mysql.collation]`

[.description]
--
Collation for connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_COLLATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_COLLATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.-datasource-name-.reactive.mysql.ssl-mode]]`link:#quarkus-datasource-data-sources-reactive-my-sql-config_quarkus.datasource.-datasource-name-.reactive.mysql.ssl-mode[quarkus.datasource."datasource-name".reactive.mysql.ssl-mode]`

[.description]
--
Desired security state of the connection to the server. 
See link:https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-mode[MySQL Reference Manual].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_SSL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MYSQL_SSL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disabled`, `preferred`, `required`, `verify-ca`, `verify-identity` 
|`disabled`

|===